--- a/Konspector/Components/Layout/MainLayout.razor
+++ b/Konspector/Components/Layout/MainLayout.razor
@@ -1,4 +1,5 @@
 ﻿@inherits LayoutComponentBase
+@using Microsoft.AspNetCore.Components.Sections
 @inject IJSRuntime JSRuntime
 @inject Konspector.Storage.ProjectProvider pp
 
@@ -13,8 +14,7 @@
     <main>
         <!--панелька зверху-->
         <div class="top-row px-4">
-            Останні
-
+            <SectionOutlet SectionName="Title" />
 
         </div>
         <!--основний контент-->
