--- a/Konspector/Components/Layout/MainLayout.razor.css
+++ b/Konspector/Components/Layout/MainLayout.razor.css
@@ -5,8 +5,10 @@
 }
 
 main {
-    flex: 1;
-    background-color: #7585BD;
+   flex: 1;
+   display: flex;
+   flex-direction: column;
+   background-color: #7585BD;
 }
 
 .sidebar {
