--- a/Konspector/Components/Pages/Latest.razor.css
+++ b/Konspector/Components/Pages/Latest.razor.css
@@ -16,7 +16,8 @@
     gap: 20px;
     padding: 20px;   
 }
-.card img {
+.card svg {
+    background: #ccc;
     width: 100%;
     height: 200px;
     object-fit: cover;
