--- a/Konspector/Components/Pages/Neuralka.razor.css
+++ b/Konspector/Components/Pages/Neuralka.razor.css
@@ -2,8 +2,8 @@
 .chat-container {
     display: flex;
     flex-direction: column;
-    height: 100vh;
-    max-width: 600px;
+    height: 100%;
+    width: 80%;
     margin: 0 auto;
     padding: 20px;
     background-color: #f5f5f5;
@@ -51,4 +51,9 @@
     border: none;
     border-radius: 5px;
     cursor: pointer;
+}
+
+button[disabled]{
+   filter: brightness(0.5);
+   pointer-events: none;
 }
