--- a/Konspector/Components/Pages/Projector.razor.css
+++ b/Konspector/Components/Pages/Projector.razor.css
@@ -1,12 +1,14 @@
 ﻿.projector-content {
    display: flex;
    justify-content: space-between;
+   height: 100%;
 }
 
 .projector-main-container {
-   width: 80%;
+   width: 100%;
    display: flex;
    flex-direction: column;
+   height: 100%;
 }
 
 .projector-panel {
@@ -20,18 +22,20 @@
    display: flex;
    flex-direction: column;
    margin-top: 20px;
+   flex-grow: 1;
 }
 
 .projector-add-column {
    display: flex;
-   justify-content: center;
+   justify-content: flex-end;
    padding: 10px;
    background-color: #e0e0e0;
+   float: right;
 }
 
 .main {
    display: flex;
-   justify-content: space-between;
+   justify-content: space-around;
    padding: 20px;
    background-color: #d0d0d0;
 }
@@ -42,6 +46,7 @@
    flex-direction: column;
    margin-right: 10px;
    background-color: #c0c0c0;
+   border-radius: 5px;
 }
 
 .kanban-column-header,
@@ -51,16 +56,26 @@
    background-color: #b0b0b0;
 }
 
+.kanban-column-header {
+   border-top-left-radius: 5px;
+   border-top-right-radius: 5px;
+}
+
 .kanban-column-body {
    padding-top: 10px;
    padding-bottom: 10px;
-   background-color: #aaa;
-} 
+   flex-grow: 1;
+}
 
 .kanban-item {
    margin-bottom: 10px;
    padding: 10px;
    background-color: #a0a0a0;
+}
+.kanban-item-head {
+   display: flex;
+   flex-direction: row;
+   justify-content: space-between;
 }
 
 .projector-sidebar {
@@ -93,11 +108,27 @@
    -webkit-user-select: none;
    user-select: none;
 }
+
 input {
    -webkit-user-select: text;
    user-select: text;
 }
+
 *[contenteditable="true"] {
    -webkit-user-select: text;
    user-select: text;
+}
+
+button {
+   background-color: RGBA(0,0,0,0.25);
+   border: none;
+   color: white;
+   padding: 5px;
+   border-radius: 5px;
+}
+
+.kanban-editable,
+.kanban-editable:active{
+   border: none;
+   background: none;
 }
